--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,8 @@
 	<ul>
 		{% for question in latest_question_list %}
 			<li>
-				<h1><a href='{% url "details" question.id %}'>{{ question.question_text }}</a></h1>
+				<!--url set to be dynamic-->
+				<h1><a href="{% url 'polls:details' question.id %}">{{ question.question_text }}</a></h1>
 			</li>
 		{% endfor %}
 	</ul>
